# Temp_reg_test

./: CMakeLists.txt  README.md  main.cpp  readme.txt
module/cpp/: Temperature_Element.cpp  Temperature_Sensor.cpp  Thermostat.cpp
module/header/: Temperature_Element.h  Temperature_Sensor.h  Thermostat.h
test/MOC/cpp/: MOC_Temperature_Sensor.cpp
test/MOC/header/: MOC_Temperature_Sensor.h
